# aelvynor

./: .gitignore  .render.yaml  DEPLOYMENT.md  GITHUB_SETUP.md  QUICK_DEPLOY.md  README.md  cleanup.sh  render.yaml  run_smoke_tests.sh  setup.sh  start_and_test.sh  start_servers.sh  stop_servers.sh  test_production_ready.py
.agent/workflows/: admin-panel-implementation.md
.github/workflows/: README.md  backend-ci.yml  ci.yml  deploy-backend-render.yml  deploy-frontend-vercel.yml  deploy-gh-pages.yml  deploy-railway.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  aelvynor.db  alembic.ini  app.py  create_admin.py  hash_password.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_status_to_application.py  003_add_content_table.py  004_add_pms_tables.py
backend/app/: __init__.py  config.py  crud.py  deps.py  main.py  models.py  schemas.py
backend/app/api/: admin.py  public.py
backend/scripts/: README.md  create_admin.py  seed.py
backend/tests/: conftest.py  test_crud.py
backend/uploads/: application_logs.txt
frontend/: README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: ConditionalLayout.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: AppTable.tsx  ApplyForm.tsx  ContactForm.tsx  FloatingBoxes.tsx  Footer.tsx  Hero.tsx  (+4 more)
scripts/: hash_password.py  reset_db.bat  reset_db.sh  start_local.bat  start_local.ps1  start_local.sh
(+85 files in other folders)
